# musicaudit

./: .gitignore  CHANGES.md  CHANGES.txt  CONTRACTS.md  CONTRIBUTING.md  FAQ  FAQ.md  GETTING-STARTED.md  NOTICE  README.md  ROADMAP.md  future-ideas.md  musicaudit_Roadmap_and_Project_Plan.md  pyproject.toml  requirements-dev.txt  run_tests.sh
.github/workflows/: lint.yml
contrib/: FILTER_SNAPSHOT_EXAMPLE.sh  README.md  SHOW_MISSING_LYRIC_FILES.sh  count_by_artist.py  snapshot_rating-fav-lyrics-csv.py
docs/: development-history.md  philosophy.md
examples/: config.sample.yaml
musicaudit/: __init__.py  analysis.py  cli.py  model.py  settings.py
musicaudit/commands/: common.py  diff.py  fix.py  health.py  playlists.py  rules.py  snapshot.py  stats.py  summary.py  tokens.py  verify.py
musicaudit/providers/: applemusic.py  audio.py  filesystem.py
musicaudit/reports/: json.py  markdown.py
musicaudit/rules/: base.py  duplicate_track.py  empty_standard_playlist.py  engine.py  low_bitrate.py  missing_album_artist.py  missing_artwork.py  missing_files.py  missing_lyrics.py  unreadable_file.py
musicaudit/util/: formatting.py
scripts/: generate_reference_library.sh
src/musicaudit/: __init__.py  cli.py  settings.py
src/musicaudit/commands/: diff.py  health.py  playlists.py  rules.py  snapshot.py  stats.py
src/musicaudit/providers/: applemusic.py  audio.py  filesystem.py
src/musicaudit/reports/: json.py  markdown.py
src/musicaudit/rules/: __init__.py  duplicate_track.py  empty_standard_playlist.py  engine.py  invalid_rating.py  low_bitrate.py  missing_album_artist.py  missing_artwork.py  missing_files.py  missing_lyrics.py  missing_rating.py  unknown_token.py  unreadable_file.py  xml_tag_mismatch.py
src/musicaudit/util/: config.py  formatting.py
tests/: conftest.py  test_applelib_isdir.py  test_broken_pipe.py  test_cli.py  test_core_json_formats.py  test_embedded_rule_json_items.py  test_filesystem_provider.py  test_fix_command.py  test_integration_reports.py  test_missing_xml.py  test_provider_cli.py  test_rules.py  test_rules_json.py  test_settings.py  test_snapshot_diff.py  test_snapshot_diff_title_fields.py  test_snapshot_diff_transitions.py  test_snapshot_providers.py  test_summary_bitrate_consistency.py  test_tokens.py  test_unknown_token_allowed.py
tests/fixtures/: missing_album_artist.xml  sample_library.xml  sample_library_after.xml
tools/: git-hook-pre-push
