[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicaudit"
version = "1.0.2"
description = "Read-only validation tool for digital music collections"
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",

]
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE-*"]
authors = [
  { name = "Jeff Beadles" }
]
dependencies = [
  "mutagen>=1.47",
  "PyYAML>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["musicaudit*"]

[project.scripts]
musicaudit = "musicaudit.cli:main"

[project.urls]
Homepage = "https://github.com/jeffbeadles/musicaudit"
Documentation = "https://github.com/jeffbeadles/musicaudit"
Repository = "https://github.com/jeffbeadles/musicaudit"
Issues = "https://github.com/jeffbeadles/musicaudit/issues"
Discussions = "https://github.com/jeffbeadles/musicaudit/discussions"
Changes = "https://jeffbeadles.github.io/musicaudit/CHANGES.md"
FAQ = "https://jeffbeadles.github.io/musicaudit/FAQ.md"

